kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-back
spec:
  ports:
    - port: 7000
      nodePort: 30083
      targetPort: 7000
  selector:
    app: my-app-back
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-back
  template:
    metadata:
      labels:
        app: my-app-back
    spec:
      containers:
      - name: backend
        image: mariomafdy/backend:latest
        ports:
        - containerPort: 7000
