kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-front
spec:
  ports:
    - port: 3000
      nodePort: 30082
      targetPort: 3000
  selector:
    app: my-app-front
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-front
  template:
    metadata:
      labels:
        app: my-app-front
    spec:
      containers:
      - name: frontend
        image: mariomafdy/frontend:latest
        ports:
        - containerPort: 3000
