kubernetes/grafana.yaml
# grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: storage-volume
          mountPath: /var/lib/grafana
        - name: datasource-volume
          mountPath: /etc/grafana/provisioning/datasources
      volumes:
      - name: datasource-volume
        configMap:
          name: grafana-datasources
      - name: storage-volume
        persistentVolumeClaim:
          claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      nodePort: 30085
      targetPort: 3000
