kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: 57d6e0a8122c.mylabserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-front
            port:
              number: 3000
      - path: /mongo-express
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
